--- a/pages/home.html
+++ b/pages/home.html
@@ -14,7 +14,7 @@
 
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Node JS</a>
+      <a class="navbar-brand" href="./home.html">Node JS</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
     </div>
   </nav>
 
-  <div class="p-3  bg-dark text-white"><h3>Home</h3></div>
+  <div class="p-3 text-center bg-dark text-white"><h3>Home</h3></div>
 
   <div class="p-3 mb-2 bg-primary text-white vh-100">
     <div class="container justify-content-center mt-5">
