--- a/pages/que_hacemos.html
+++ b/pages/que_hacemos.html
@@ -14,7 +14,7 @@
 
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Node JS</a>
+      <a class="navbar-brand" href="./home.html">Node JS</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
+            <a class="nav-link" aria-current="page" href="./home.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./quienes_somos.html">Quiénes somos</a>
@@ -31,17 +31,17 @@
             <a class="nav-link" href="./donde_estamos.html">Donde estamos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./que_hacemos.html">Qué hacemos</a>
+            <a class="nav-link active" href="./que_hacemos.html">Qué hacemos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="./contacto.html">Contacto</a>
+            <a class="nav-link" href="./contacto.html">Contacto</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <div class="p-3  bg-dark text-white"><h3>Qué hacemos?</h3></div>
+  <div class="p-3 text-center bg-dark text-white"><h3>Qué hacemos?</h3></div>
 
   <div class="p-3 mb-2 bg-primary text-white vh-100">
     <div class="container justify-content-center mt-5">
